--- a/modelos_jiahao.ipynb
+++ b/modelos_jiahao.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 8,
    "id": "425e3697",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
     "# Paralelize the model\n",
     "import multiprocessing\n",
     "# Learning rate scheduler\n",
-    "from torch.optim.lr_scheduler import ReduceLROnPlateau"
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 9,
    "id": "6e00d720",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 10,
    "id": "76fd0a66",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "id": "003abb5e",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "a9451207",
    "metadata": {},
    "outputs": [],
@@ -142,6 +142,7 @@
     "lr = 0.01\n",
     "batch_size = 64\n",
     "max_total_time = 1800 \n",
+    "\n",
     "num_core = multiprocessing.cpu_count()\n",
     "weight_decay = 1e-4\n",
     "dataloader = DataLoader(dataset, \n",
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "id": "641404d2",
    "metadata": {},
    "outputs": [],
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 14,
    "id": "4bef1bc0",
    "metadata": {},
    "outputs": [],
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3e7fe1ad",
    "metadata": {},
    "outputs": [],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 16,
    "id": "dc15691b",
    "metadata": {},
    "outputs": [],
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "id": "4cf4fa1b",
    "metadata": {},
    "outputs": [
@@ -262,250 +263,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                        \r"
+      "                                                                        "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validació (després de la època 1[152.14s]) Accuracy: 60.87%\n",
-      "Nou millor model guardat amb 60.87% de precisió de validació\n"
+      "Validació (després de la època 1[341.98s]) Accuracy: 54.35%\n",
+      "Nou millor model guardat amb 54.35% de precisió de validació\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 2[109.23s]) Accuracy: 59.42%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 3[102.21s]) Accuracy: 63.77%\n",
-      "Nou millor model guardat amb 63.77% de precisió de validació\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 4[101.08s]) Accuracy: 57.25%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 5[101.03s]) Accuracy: 64.49%\n",
-      "Nou millor model guardat amb 64.49% de precisió de validació\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 6[100.50s]) Accuracy: 63.77%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 7[101.86s]) Accuracy: 57.25%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 8[100.50s]) Accuracy: 67.39%\n",
-      "Nou millor model guardat amb 67.39% de precisió de validació\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 9[100.59s]) Accuracy: 68.84%\n",
-      "Nou millor model guardat amb 68.84% de precisió de validació\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 10[100.13s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 11[101.60s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 12[103.70s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 13[100.40s]) Accuracy: 67.39%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 14[98.03s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 15[99.86s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validació (després de la època 16[106.37s]) Accuracy: 68.12%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Temps màxim assolit. Fi de l'entrenament\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
+      "Època 2:   8%|▊         | 228/2804 [00:12<02:13, 19.25it/s, loss=0.802]"
      ]
     }
    ],
@@ -554,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "id": "d707a527",
    "metadata": {},
    "outputs": [],
@@ -569,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "718f879a",
    "metadata": {},
    "outputs": [
@@ -624,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
