--- a/modelos.ipynb
+++ b/modelos.ipynb
@@ -40,7 +40,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "id": "90931cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Augmentation utilities\n",
+    "from torchvision.transforms import functional as F\n",
+    "import random\n",
+    "\n",
+    "class AdvancedAugmentation:\n",
+    "    \"\"\"Custom data augmentation for our drawing dataset\"\"\"\n",
+    "    \n",
+    "    def __init__(self, prob=0.5):\n",
+    "        self.prob = prob\n",
+    "    \n",
+    "    def __call__(self, img):\n",
+    "        # Apply transformations with probability\n",
+    "        if random.random() < self.prob:\n",
+    "            # Random rotation (± 20 degrees)\n",
+    "            angle = random.uniform(-20, 20)\n",
+    "            img = F.rotate(img, angle, fill=0)\n",
+    "        \n",
+    "        if random.random() < self.prob:\n",
+    "            # Random shifts (± 15%)\n",
+    "            shift_x = random.uniform(-0.15, 0.15)\n",
+    "            shift_y = random.uniform(-0.15, 0.15)\n",
+    "            img = F.affine(img, angle=0, translate=[shift_x, shift_y], \n",
+    "                           scale=1.0, shear=0, fill=0)\n",
+    "        \n",
+    "        if random.random() < 0.3:\n",
+    "            # Random erasing (simulates occlusions)\n",
+    "            h, w = img.shape[1:]\n",
+    "            area = h * w\n",
+    "            target_area = random.uniform(0.02, 0.15) * area\n",
+    "            aspect_ratio = random.uniform(0.3, 1/0.3)\n",
+    "            \n",
+    "            h_rect = int(np.sqrt(target_area * aspect_ratio))\n",
+    "            w_rect = int(np.sqrt(target_area / aspect_ratio))\n",
+    "            \n",
+    "            if h_rect < h and w_rect < w:\n",
+    "                x1 = random.randint(0, h - h_rect)\n",
+    "                y1 = random.randint(0, w - w_rect)\n",
+    "                mask = torch.ones_like(img)\n",
+    "                mask[:, x1:x1+h_rect, y1:y1+w_rect] = 0\n",
+    "                img = img * mask\n",
+    "        \n",
+    "        if random.random() < 0.2:\n",
+    "            # Add slight Gaussian noise\n",
+    "            noise = torch.randn_like(img) * 0.05\n",
+    "            img = torch.clamp(img + noise, 0, 1)\n",
+    "            \n",
+    "        if random.random() < 0.2:\n",
+    "            # Adjust brightness/contrast\n",
+    "            brightness = random.uniform(-0.2, 0.2)\n",
+    "            contrast = random.uniform(0.8, 1.2)\n",
+    "            img = F.adjust_brightness(img, 1 + brightness)\n",
+    "            img = F.adjust_contrast(img, contrast)\n",
+    "        \n",
+    "        return img\n",
+    "\n",
+    "# Visualize augmentations\n",
+    "def visualize_augmentations(dataset, num_images=5, num_aug=3):\n",
+    "    \"\"\"Visualize original and augmented versions of images from the dataset\"\"\"\n",
+    "    augmenter = AdvancedAugmentation(prob=0.8)\n",
+    "    \n",
+    "    plt.figure(figsize=(num_aug+1, num_images*2))\n",
+    "    for i in range(num_images):\n",
+    "        img, label = dataset[i]\n",
+    "        \n",
+    "        # Show original\n",
+    "        plt.subplot(num_images, num_aug+1, i*(num_aug+1)+1)\n",
+    "        plt.imshow(img.squeeze(), cmap='gray')\n",
+    "        plt.title(f\"Original: {dataset.classes[label]}\")\n",
+    "        plt.axis('off')\n",
+    "        \n",
+    "        # Show augmentations\n",
+    "        for j in range(num_aug):\n",
+    "            aug_img = augmenter(img.clone())\n",
+    "            plt.subplot(num_images, num_aug+1, i*(num_aug+1)+j+2)\n",
+    "            plt.imshow(aug_img.squeeze(), cmap='gray')\n",
+    "            plt.title(f\"Aug {j+1}\")\n",
+    "            plt.axis('off')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "003abb5e",
    "metadata": {},
    "outputs": [],
@@ -51,18 +140,33 @@
     "start_time = time.time()\n",
     "\n",
     "# ---------- Dataset ----------\n",
-    "transform = transforms.Compose([transforms.Grayscale(num_output_channels=1), transforms.ToTensor()])\n",
+    "# Basic transformation for validation and testing\n",
+    "basic_transform = transforms.Compose([\n",
+    "    transforms.Grayscale(num_output_channels=1), \n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "# Advanced transformation with augmentation for training\n",
+    "augmentation_transform = transforms.Compose([\n",
+    "    transforms.Grayscale(num_output_channels=1),\n",
+    "    transforms.ToTensor(),\n",
+    "    AdvancedAugmentation(prob=0.7)\n",
+    "])\n",
     "\n",
     "data_dir = \"data/train\"\n",
-    "dataset = datasets.ImageFolder(root=data_dir, transform=transform)\n",
+    "# Use augmented transformations for training\n",
+    "dataset = datasets.ImageFolder(root=data_dir, transform=augmentation_transform)\n",
     "\n",
     "class_names = dataset.classes\n",
     "num_classes = len(class_names)\n",
     "\n",
     "# ---------- Validació ----------\n",
     "val_dir = \"data/validation\"\n",
-    "val_dataset = datasets.ImageFolder(root=val_dir, transform=transform)\n",
-    "\n"
+    "# Use basic transform without augmentation for validation\n",
+    "val_dataset = datasets.ImageFolder(root=val_dir, transform=basic_transform)\n",
+    "\n",
+    "# Visualize some augmented samples\n",
+    "visualize_augmentations(datasets.ImageFolder(root=data_dir, transform=basic_transform))"
    ]
   },
   {
