--- a/modelos.ipynb
+++ b/modelos.ipynb
@@ -220,6 +220,65 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
+    "class ImprovedCNNModel(nn.Module):\n",
+    "    def __init__(self, num_classes, dropout_rate=0.25, fc_dropout=0.5):\n",
+    "        super(ImprovedCNNModel, self).__init__()\n",
+    "        \n",
+    "        # First convolutional block: 2x Conv2D + MaxPool + Dropout\n",
+    "        self.conv1_1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)\n",
+    "        self.bn1_1 = nn.BatchNorm2d(32)\n",
+    "        self.conv1_2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.bn1_2 = nn.BatchNorm2d(32)\n",
+    "        self.pool1 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout1 = nn.Dropout2d(dropout_rate)\n",
+    "        \n",
+    "        # Second convolutional block: 2x Conv2D + MaxPool + Dropout\n",
+    "        self.conv2_1 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.bn2_1 = nn.BatchNorm2d(64)\n",
+    "        self.conv2_2 = nn.Conv2d(64, 64, kernel_size=3, padding=1)\n",
+    "        self.bn2_2 = nn.BatchNorm2d(64)\n",
+    "        self.pool2 = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout2 = nn.Dropout2d(dropout_rate)\n",
+    "        \n",
+    "        # Third convolutional block: Conv2D + Global Average Pooling\n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
+    "        self.bn3 = nn.BatchNorm2d(128)\n",
+    "        self.global_pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        \n",
+    "        # Fully connected layer\n",
+    "        self.fc1 = nn.Linear(128, 512)\n",
+    "        self.bn_fc = nn.BatchNorm1d(512)\n",
+    "        self.fc_dropout = nn.Dropout(fc_dropout)\n",
+    "        self.fc2 = nn.Linear(512, num_classes)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # First block\n",
+    "        x = F.relu(self.bn1_1(self.conv1_1(x)))\n",
+    "        x = F.relu(self.bn1_2(self.conv1_2(x)))\n",
+    "        x = self.pool1(x)\n",
+    "        x = self.dropout1(x)\n",
+    "        \n",
+    "        # Second block\n",
+    "        x = F.relu(self.bn2_1(self.conv2_1(x)))\n",
+    "        x = F.relu(self.bn2_2(self.conv2_2(x)))\n",
+    "        x = self.pool2(x)\n",
+    "        x = self.dropout2(x)\n",
+    "        \n",
+    "        # Third block\n",
+    "        x = F.relu(self.bn3(self.conv3(x)))\n",
+    "        x = self.global_pool(x)\n",
+    "        \n",
+    "        # Flatten\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        \n",
+    "        # Fully connected layers\n",
+    "        x = F.relu(self.bn_fc(self.fc1(x)))\n",
+    "        x = self.fc_dropout(x)\n",
+    "        x = self.fc2(x)\n",
+    "        \n",
+    "        return x\n",
+    "\n",
+    "# Original model (for reference)\n",
     "class ElVostreModel(nn.Module):\n",
     "    def __init__(self, num_classes, dropout_rate=0.3):\n",
     "        super(ElVostreModel, self).__init__()\n",
@@ -318,13 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "4bef1bc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cpu\")\n",
-    "model = ElVostreModel(num_classes).to(device)"
+    "# Use the improved model based on the recommended structure\n",
+    "model = ImprovedCNNModel(num_classes).to(device)"
    ]
   },
   {
@@ -626,14 +686,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "625949d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_best_model(path, num_classes):\n",
     "    \"\"\"Carga el mejor modelo guardado.\"\"\"\n",
-    "    model = ElVostreModel(num_classes)\n",
+    "    # Update to use the improved model\n",
+    "    model = ImprovedCNNModel(num_classes)\n",
     "    model.load_state_dict(torch.load(path))\n",
     "    model = model.to(device)\n",
     "    return model"
@@ -676,7 +737,32 @@
    "id": "05c388dd",
    "metadata": {},
    "source": [
-    "## Afegir els pessos"
+    "## Model Architecture Analysis\n",
+    "\n",
+    "The model architecture implemented follows the recommended structure:\n",
+    "\n",
+    "1. First convolutional block:\n",
+    "   - Two Conv2D layers with 32 filters (3x3) + BatchNorm + ReLU\n",
+    "   - MaxPool2D(2x2) + Dropout(0.25)\n",
+    "\n",
+    "2. Second convolutional block:\n",
+    "   - Two Conv2D layers with 64 filters (3x3) + BatchNorm + ReLU\n",
+    "   - MaxPool2D(2x2) + Dropout(0.25)\n",
+    "\n",
+    "3. Third convolutional block:\n",
+    "   - One Conv2D layer with 128 filters (3x3) + BatchNorm + ReLU\n",
+    "   - GlobalAveragePooling2D\n",
+    "\n",
+    "4. Fully connected layers:\n",
+    "   - Dense(512) + BatchNorm + ReLU + Dropout(0.5)\n",
+    "   - Dense(num_classes)\n",
+    "\n",
+    "This architecture is effective for our drawing classification task because:\n",
+    "1. Multiple convolutional layers extract hierarchical features\n",
+    "2. Batch normalization improves training stability and speed\n",
+    "3. Dropout layers reduce overfitting\n",
+    "4. Global average pooling reduces parameters and helps with spatial invariance\n",
+    "5. The final dense layers learn high-level representations"
    ]
   },
   {
